<resources>
    <string name="app_name">MoreTechMobile</string>
    <string name="header1">Научитесь инвестировать с ВТБ учебником</string>
    <string name="about_game">Игра симулирует 10 лет жизни, за которые вам необходимо заработать как можно больше денег с помощью различных финансовых инструментов.</string>
    <string name="register">Зарегистрироваться</string>
    <string name="button_come">Войти</string>

    <string name="mail">E-mail</string>
    <string name="password">Пароль</string>

    <string name="hint_mail">Введите E-mail</string>
    <string name="hint_password">Введите пароль</string>
    <string name="have_acc">Уже есть аккаунт? Войдите</string>

    <string name="come_in">Войдите</string>
    <string name="reg_in">Зарегистрируйтесь</string>
    <string name="register_if_havent">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="hint_nick">Введите ник</string>
    <string name="nick">Никнейм</string>
    <string name="error_auth">Ошибка авторизации</string>
    <string name="game">Игра</string>
    <string name="shop">Магазин</string>
    <string name="victorina">Викторина</string>
    <string name="profile">Профиль</string>
    <string name="header_page4">Выбери уровень сложности и нажми играть</string>
    <string name="novichek">Новичок</string>
    <string name="prodvinutiy">Продвинутый</string>
    <string name="professional">Профессонал</string>
    <string name="rules">Правила игры</string>
    <string name="watch_all">Смотреть все</string>
    <string name="goal">Цель игры</string>
    <string name="event">События</string>
    <string name="notrect">Необязательные расходы</string>
    <string name="play">Играть</string>
    <string name="game_rules">ПРАВИЛА ИГРЫ</string>
    <string name="view_all">Смотреть все</string>
    <string name="invested">Вложено</string>
    <string name="budget">Бюджет</string>
    <string name="happy">Счастье</string>
    <string name="stock">Акции</string>
    <string name="vklady">Вклады</string>
    <string name="oblig">Облигации</string>
    <string name="kopilka">Инвест копилка</string>
    <string name="all">Вложить все</string>
    <string name="set">Вложить</string>
    <string name="relative_companies">ДОЧЕРНИЕ КОМПАНИИ</string>
    <string name="stock_market">Биржа</string>
    <string name="news">Новости</string>
    <string name="dividendi">Дивиденды</string>
    <string name="learn">Обучение</string>
    <string name="stah">Страховка</string>

    <string name="min_trati">Это расходы на еду, жилье, транспорт
и т.д. Их нужно обязательно оплатить, чтобы продолжить</string>
    <string name="travel">В пучине рабочей рутины так и хочется взять всю семью и уехать ненадолго 
в отпуск </string>
    <string name="gifts">Вы работаете в дружном коллективе, 
где принято дарить подарки
 на все праздники в году</string>
    <string name="iphone">У вашего ребенка день рождения.
Вы уже давно никого не радовали дорогими подарками</string>
    <string name="entertainment">Тяжело жить по принципу 
“дом-работа-дом”. Сюда всходит посещение концертов, кино и другое.</string>
    <string name="final_card">Вы можете закончить ход, но перед этим проинвестируйте
свободные средства</string>
    <string name="or">или</string>
    <string name="end_gift">Ваша награда</string>
    <string name="sell">Продать</string>
    <string name="hold">Держать</string>

</resources>