<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComeInActivity">
    <View
        android:id="@+id/back_button"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_arrow_left"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/come_in"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_button">

    </TextView>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/regular"
        android:text="@string/mail"
        android:textColor="#889099"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/mail_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1">

    </TextView>

    <EditText
        android:id="@+id/mail_edit"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/states_edittext"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/hint_mail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"

        >

    </EditText>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/regular"
        android:paddingRight="24dp"
        android:text="@string/password"
        android:textColor="#889099"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/password_edit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mail_edit">

    </TextView>

    <EditText
        android:id="@+id/password_edit"
        style="@style/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/states_edittext"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/hint_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3">

    </EditText>

    <Button
        android:id="@+id/reg_button"
        style="@style/reg_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/states_button"
        android:fontFamily="@font/semibold"
        android:text="@string/button_come"
        app:layout_constraintBottom_toTopOf="@id/bottom_text">

    </Button>

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:paddingTop="13dp"
        android:paddingBottom="10dp"
        android:text="@string/register_if_havent"
        android:textColor="#889099"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        />
</androidx.constraintlayout.widget.ConstraintLayout>