<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/header_page4"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:layout_marginTop="25dp"
    android:fontFamily="@font/montserrat_medium"
    android:textColor="@color/black"
    android:textSize="24sp"
    >

</TextView>
    <HorizontalScrollView
        android:id="@+id/hscroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                style="@style/grey_rounded_button_style"
                android:text="@string/novichek"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"
                >

            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                style="@style/grey_rounded_button_style"
                android:text="@string/prodvinutiy"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"

                >

            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                style="@style/grey_rounded_button_style"
                android:text="@string/professional"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingRight="16dp"
                android:paddingLeft="16dp"

                >
            </Button>
            
        </LinearLayout>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>