<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F5F7FA"
    >
<HorizontalScrollView
android:id="@+id/hscroll"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:scrollbars="none"
android:layout_marginTop="15dp"
app:layout_constraintTop_toTopOf="parent"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/stock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/reg_button"
        android:text="@string/stock"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:minHeight="34dp"
        >

    </Button>
    <Button
        android:id="@+id/vklad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/grey_rounded_border_button_style"
        android:text="@string/vklady"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="30dp"
        android:minHeight="34dp"

        >

    </Button>
    <Button
        android:id="@+id/oblig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/grey_rounded_border_button_style"
        android:text="@string/oblig"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        android:minHeight="34dp"
        android:layout_marginRight="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="30dp"
        >
    </Button>
    <Button
        android:id="@+id/invest_kopilka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/grey_rounded_border_button_style"
        android:text="@string/kopilka"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_medium"
        android:layout_marginRight="10dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="30dp"
        android:minHeight="34dp"
        >
    </Button>

</LinearLayout>

</HorizontalScrollView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hscroll"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>