<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="13sp"
        android:textColor="#99ABC6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
    </TextView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <Button
                android:layout_weight="1"
                android:id="@+id/stock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/reg_button"
                android:text="@string/stock_market"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginBottom="30dp"
                android:minHeight="34dp"
                android:layout_marginLeft="24dp"
                >

            </Button>
            <Button
                android:layout_weight="1"
                android:id="@+id/vklad"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/grey_rounded_border_button_style"
                android:text="@string/news"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginBottom="30dp"
                android:minHeight="34dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                >

            </Button>
            <Button
                android:layout_weight="1"
                android:id="@+id/oblig"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/grey_rounded_border_button_style"
                android:text="@string/dividendi"
                android:textSize="14sp"
                android:fontFamily="@font/montserrat_medium"
                android:minHeight="34dp"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="24dp"
                >
            </Button>


        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>