<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_image"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:background="#F4F6F5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".FirstRegisterActivity">

            <ImageView
                android:id="@+id/background"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:src="@drawable/rectangle"
                app:layout_constraintBottom_toTopOf="@id/text1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </ImageView>

            <ImageView
                android:id="@+id/outside_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintLeft_toLeftOf="@id/background"
                app:layout_constraintTop_toTopOf="@id/background" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:fontFamily="@font/semibold"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:text="@string/header1"
                android:textColor="@color/fontBlack"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/text2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/background" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:paddingLeft="24dp"
                android:paddingTop="8dp"
                android:paddingRight="24dp"
                android:text="@string/about_game"
                android:textColor="#889099"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@id/reg_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text1">

            </TextView>

            <Button
                android:id="@+id/reg_button"
                style="@style/reg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/states_button"
                android:fontFamily="@font/semibold"
                android:text="@string/register"
                app:layout_constraintBottom_toTopOf="@id/bottom_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text2">

            </Button>

            <Button
                android:id="@+id/bottom_button"
                style="@style/come_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/semibold"
                android:text="@string/button_come"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                >

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>